# Jade-League-Bin-Editor

./: .gitignore  App.xaml  App.xaml.cs  Jade.csproj  LICENSE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
Core/: TextBuffer.cs  TextSelection.cs
Editor/: BinFileFoldingStrategy.cs  BinSyntaxValidator.cs  BracketColorizer.cs  BracketHighlightRenderer.cs  BracketScopeLineRenderer.cs  EditorRenderer.cs  ErrorHighlightRenderer.cs  ErrorUnderlineRenderer.cs  InputController.cs  MinimapBackgroundRenderer.cs  SearchHighlightRenderer.cs  StickyScrollControl.cs  SyntaxHighlighter.cs  TextEditorControl.cs
Ritobin/: BinConverter.cs  BinReader.cs  BinTextReader.cs  BinTextWriter.cs  BinTypes.cs  BinUnhasher.cs  BinWriter.cs  BinaryHashConverter.cs  HashManager.cs
Services/: HashDownloader.cs  LinkedBinParser.cs  Logger.cs  ThemeHelper.cs  ThemeSyntaxHighlighting.cs  TrayService.cs
Windows/: AboutWindow.xaml  AboutWindow.xaml.cs  CompareDialog.xaml  CompareDialog.xaml.cs  FindDialog.xaml  FindDialog.xaml.cs  IconPanelDialog.xaml  IconPanelDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MaterialOverrideEntryDialog.xaml  MaterialOverrideEntryDialog.xaml.cs  ParticlePanelDialog.xaml  ParticlePanelDialog.xaml.cs  PreferencesWindow.xaml  PreferencesWindow.xaml.cs  ReplaceDialog.xaml  ReplaceDialog.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  ThemesWindow.xaml  ThemesWindow.xaml.cs
src/: App.css  App.modernui.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: extra_icons.rc
src-tauri/src/: app_commands.rs  bin_commands.rs  error.rs  extra_commands.rs  hash_commands.rs  lib.rs  library_commands.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/hash/: hashtable.rs  mod.rs
src/components/: AboutDialog.css  AboutDialog.tsx  EditorContextMenu.css  EditorContextMenu.tsx  FileLoadingToast.css  FileLoadingToast.tsx  FontPicker.tsx  GeneralEditPanel.css  GeneralEditPanel.tsx  HashSyncToast.css  HashSyncToast.tsx  Icons.tsx  MarkdownEditPanel.css  MarkdownEditPanel.tsx  MarkdownPreview.css  MarkdownPreview.tsx  MaterialLibraryBrowser.css  MaterialLibraryBrowser.tsx  MaterialOverrideDialog.css  MaterialOverrideDialog.tsx  MenuBar.css  MenuBar.tsx  NewFileDialog.css  NewFileDialog.tsx  ParticleEditorDialog.css  ParticleEditorDialog.tsx  ParticleEditorPanel.css  ParticleEditorPanel.tsx  PreferencesDialog.css  PreferencesDialog.tsx  QuartzDiffTab.tsx  QuartzInstallModal.css  QuartzInstallModal.tsx  SettingsDialog.css  SettingsDialog.tsx  SmokeOverlay.tsx  TabBar.tsx  TexHoverPopup.css  TexHoverPopup.tsx  TexturePreviewTab.css  (+10 more)
src/lib/: binOperations.ts  (+5 more)
(+18 files in other folders)
