[package]
name = "jade-rust"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "jade_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libloading = "0.8"
opener = "0.7"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
byteorder = "1.5"
once_cell = "1.19"
parking_lot = "0.12"

# Parallel processing for hash loading
rayon = "1.10"
futures = "0.3"
chrono = { version = "0.4", features = ["clock"] }

# Error handling
thiserror = "2"
indexmap = "2.13.0"

# Windows registry for file association
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# League Toolkit for BIN file parsing (crates.io for compatible ltk_primitives version)
ltk_meta = { version = "0.3.3", features = ["serde"] }
ltk_ritobin = "0.1.4"
